--- a/templates/default/redmine.conf.erb
+++ b/templates/default/redmine.conf.erb
@@ -1,29 +1,19 @@
 <VirtualHost *:80>
   ServerName <%= @params[:server_name] %>
   ServerAlias <% @params[:server_aliases].each do |a| %><%= a %> <% end %>
-  DocumentRoot <%= @params[:docroot] %>
+  DocumentRoot /var/www
 
   RailsEnv <%= @params[:rails_env] %>
 
-<%- if @params[:install_method].nil? %>
-  RailsBaseURI <%= @params[:docroot] %>
 
-  <Directory <%= @params[:docroot] %>>
+  <Directory /var/www/redmine>
     Options FollowSymLinks
     AllowOverride None
     Order allow,deny
     Allow from all
+    RailsBaseURI /redmine
+    PassengerResolveSymlinksInDocumentRoot on
   </Directory>
-<%- elsif @params[:install_method] == 'dpkg' %>
-  PassengerAppRoot /var/lib/redmine/<%= @params[:instance] %>/passenger
-  SetEnv X_DEBIAN_SITEID "<%= @params[:instance] %>"
-  Alias "/plugin_assets/" /var/cache/redmine/<%= @params[:instance] %>/plugin_assets/
-
-  <Directory "/usr/share/redmine/public">
-    Order allow,deny
-    Allow from all
-  </Directory>
-<%- end %>
 
   LogLevel info
   ErrorLog <%= node[:apache][:log_dir] %>/<%= @params[:name] %>-error.log
